deploy: 98f5be4b3756d832287f4e1779d5a7b7817b7bea

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-90295b91.js">
+		<link rel="modulepreload" href="./_app/immutable/start-ab82a6f1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-145ce36d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-3adbd4f2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-f40e8b78.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-2ceea03e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-6fcc24d2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-f48b6a2b.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-42ed00af.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-08fb995f.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9458070f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-31d24f85.js">
@@ -116,7 +116,7 @@
   <section class="relative mx-auto pt-6 sm:pt-10 px-6"><div class="flex flex-wrap gap-1.5 sm:gap-3 text-xs uppercase font-bold text-custom-darkpurple justify-center"><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid bg-utxo-gradient border-0 text-white">Hlavní přednášející (13)
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Vše
-          (40)
+          (41)
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Základy
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Bitcoin
@@ -393,98 +393,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
 
 
 
@@ -523,45 +432,6 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/karel-fillner-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Karel Fillner"></div>
 
 
@@ -575,33 +445,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
 
 
 
@@ -627,7 +471,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
 
 
 
@@ -640,7 +484,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
 
 
 
@@ -666,7 +510,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
 
 
 
@@ -679,33 +523,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
 
 
 
@@ -731,7 +549,189 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
 
 
 
@@ -836,14 +836,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="g563le">
-			import { start } from "./_app/immutable/start-90295b91.js";
+		<script type="module" data-sveltekit-hydrate="152gjjn">
+			import { start } from "./_app/immutable/start-ab82a6f1.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="g563le"]').parentNode,
-				version: "1678452679124",
+				target: document.querySelector('[data-sveltekit-hydrate="152gjjn"]').parentNode,
+				version: "1679270781999",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
