--- a/lide/libor-flossler.html
+++ b/lide/libor-flossler.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-90295b91.js">
+		<link rel="modulepreload" href="../_app/immutable/start-ab82a6f1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-145ce36d.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-3adbd4f2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-f40e8b78.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-2ceea03e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-6fcc24d2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-f48b6a2b.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-42ed00af.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-08fb995f.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-8bceeb30.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-3989b007.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-635909d1.js"><title>Libor Flössler | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-329c6e2d.js"><title>Libor Flössler | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -111,7 +111,7 @@
     <div class="sm:flex gap-10 mt-4"><div>
 
 <div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg)"></div></div></div></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/libor-flossler-twitter.jpg)"></div></div></div></div>
 
 
 
@@ -156,14 +156,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="u0545g">
-			import { start } from "../_app/immutable/start-90295b91.js";
+		<script type="module" data-sveltekit-hydrate="mt3x0p">
+			import { start } from "../_app/immutable/start-ab82a6f1.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="u0545g"]').parentNode,
-				version: "1678452679124",
+				target: document.querySelector('[data-sveltekit-hydrate="mt3x0p"]').parentNode,
+				version: "1679270781999",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
