--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-ab82a6f1.js">
+		<link rel="modulepreload" href="./_app/immutable/start-84cac1d7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-3adbd4f2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-b240d539.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-2ceea03e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-4ca16385.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-42ed00af.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-08fb995f.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-6b9d8772.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a95bc2b2.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9458070f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-31d24f85.js">
@@ -393,71 +393,6 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/karel-fillner-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Karel Fillner"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
 
 
@@ -471,7 +406,33 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
 
 
 
@@ -497,72 +458,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
 
 
 
@@ -588,20 +484,111 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/karel-fillner-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Karel Fillner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/mario-havel-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Mario Havel"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
 
 
 
@@ -640,7 +627,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
 
 
 
@@ -653,7 +640,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
 
 
 
@@ -666,7 +653,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -692,7 +692,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -705,7 +705,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
 
 
 
@@ -718,7 +718,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
 
 
 
@@ -731,7 +731,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
 
 
 
@@ -836,14 +836,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="152gjjn">
-			import { start } from "./_app/immutable/start-ab82a6f1.js";
+		<script type="module" data-sveltekit-hydrate="xvfqse">
+			import { start } from "./_app/immutable/start-84cac1d7.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="152gjjn"]').parentNode,
-				version: "1679270781999",
+				target: document.querySelector('[data-sveltekit-hydrate="xvfqse"]').parentNode,
+				version: "1679291079487",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
