--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,7 +52,7 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7dc4236b.js">
+		<link rel="modulepreload" href="./_app/immutable/start-a523c6ba.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
@@ -100,7 +100,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-5.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-3.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%20utxo.cz%20%23utxo23%20" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -124,14 +124,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="grhg0o">
-			import { start } from "./_app/immutable/start-7dc4236b.js";
+		<script type="module" data-sveltekit-hydrate="b75xr2">
+			import { start } from "./_app/immutable/start-a523c6ba.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="grhg0o"]').parentNode,
-				version: "1679499730412",
+				target: document.querySelector('[data-sveltekit-hydrate="b75xr2"]').parentNode,
+				version: "1679517842384",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
